--- a/Random Quotes Machine/index.html
+++ b/Random Quotes Machine/index.html
@@ -1,1 +1,54 @@
-test
+<!DOCTYPE html>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>Build a Random Quote Machine</title>
+  
+  
+  <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
+
+      <link rel="stylesheet" href="css/style.css">
+
+  
+</head>
+
+<body>
+  <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
+
+
+<div class="head">
+<h1>Random Quote Machine</h1>
+</div>
+
+</br>
+<div class="par">
+<p>fave quote of all time</p>
+</div>
+
+</br>
+
+
+<div class="quote">
+<span id = "saying"></span>
+</br>
+<span id = "author"></span>
+</div>
+
+</br>
+</br>
+
+<div class=button>
+<button id="tweet" onclick="page();">Tweet this Quote!</button>
+</div>
+
+
+<div class=button>
+<button id="generator">New Quote</button>
+</div>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script>
+<script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+
+    <script src="js/index.js"></script>
+
+</body>
+</html>
